--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@dikac/t-validatable",
-  "version": "0.20.0-beta.3",
+  "version": "0.20.0-beta.4",
   "description": "Typescript validatable",
   "dependencies": {
-    "@dikac/t-boolean": "^0.10.1",
-    "@dikac/t-function": "^0.14.1",
-    "@dikac/t-object": "^0.36.11",
+    "@dikac/t-boolean": "^0.11.0-beta.0",
+    "@dikac/t-function": "^0.15.0-beta.3",
+    "@dikac/t-object": "^0.37.0-alpha.0",
     "@dikac/t-string": "^0.15.4",
-    "@dikac/t-value": "^0.14.1",
+    "@dikac/t-value": "^0.14.6",
     "@dikac/t-message": "^0.11.3",
     "@dikac/t-code": "^0.2.3",
     "ts-toolbelt": "^9.6.0"
