--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@dikac/t-validatable",
+  "name": "@alirya/validatable",
   "version": "0.20.0-beta.7",
   "description": "Typescript validatable",
   "dependencies": {
-    "@dikac/t-boolean": "^0.11.0-beta.6",
-    "@dikac/t-function": "^0.15.0-beta.9",
-    "@dikac/t-object": "^0.37.0-alpha.5",
-    "@dikac/t-string": "^0.16.0-alpha.4",
-    "@dikac/t-value": "^0.15.0-beta.2",
-    "@dikac/t-message": "^0.12.0-alpha.2",
-    "@dikac/t-code": "^0.3.0-alpha.1",
+    "@alirya/boolean": "^0.11.0-beta.6",
+    "@alirya/function": "^0.15.0-beta.9",
+    "@alirya/object": "^0.37.0-alpha.5",
+    "@alirya/string": "^0.16.0-alpha.4",
+    "@alirya/value": "^0.15.0-beta.2",
+    "@alirya/message": "^0.12.0-alpha.2",
+    "@alirya/code": "^0.3.0-alpha.1",
     "ts-toolbelt": "^9.6.0"
   },
   "devDependencies": {
-    "@types/jasmine": "^3.10.1",
+    "@types/jasmine": "^3.10.2",
     "cpy-cli": "^3.1.1",
     "esm": "^3.2.25",
     "jasmine": "^3.10.0",
@@ -23,7 +23,9 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-cleaner": "^1.0.5",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.2",
+    "tslint": "^5.13.0",
+    "typedoc": "^0.22.10"
   },
   "scripts": {
     "spec-run-js": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
@@ -41,6 +43,9 @@
     "postrelease": "npm publish ./dist",
     "prerelease": "npm-run-all _release-remove-compile-cache compile _release_copy-meta-files",
     "postpublish": "rimraf package.json package-lock.json LICENSE Readme.md .npmignore",
+    "lint": "tslint --project ./tslint.json",
+    "lint-fix": "tslint --project ./tslint.json --fix",
+    "doc-generate": "npm-run-all _doc-clean _doc-generate",
     "_compile-script": "tsc",
     "_spec-ensure-directory": "mkdirp dist-spec",
     "_compile-script-watch": "tsc -w",
@@ -48,9 +53,21 @@
     "_spec-compile-watch-script": "tsc -w -p tsconfig-spec.json",
     "_compile-ensure-directory": "mkdirp dist",
     "_release_copy-meta-files": "cpy package.json package-lock.json LICENSE Readme.md .npmignore dist",
-    "_release-remove-compile-cache": "rimraf ./dist/compiler-cache"
+    "_release-remove-compile-cache": "rimraf ./dist/compiler-cache",
+    "_doc-generate": "typedoc --entryPointStrategy expand ./src --out docs",
+    "_doc-clean": "rimraf docs"
+  },
+  "publishConfig": {
+    "directory": "dist"
+  },
+  "author": {
+    "name": "Andika Candra"
   },
   "private": true,
-  "author": "",
-  "license": "MIT"
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/alirya/validatable",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alirya/validatable"
+  }
 }
