--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
     "moduleResolution": "node",
     "module": "es2015",
     "declaration": true,
-    "target": "es2016",
-    "experimentalDecorators": true,
+    "target": "es2015",
     "outDir": "dist",
     "sourceMap": true,
+    "declarationMap": true,
     "allowSyntheticDefaultImports": true,
     "downlevelIteration" : true,
     "strictNullChecks": true,
