--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Typescript validatable",
   "dependencies": {
     "tslib": "^2.3.1",
-    "@alirya/boolean": "0.11.0",
-    "@alirya/function": "0.15.0",
-    "@alirya/object": "0.37.1",
-    "@alirya/string": "0.16.1",
-    "@alirya/value": "0.15.0",
-    "@alirya/message": "0.12.0",
-    "@alirya/code": "0.3.1",
+    "@alirya/boolean": "^0.11.0",
+    "@alirya/function": "^0.15.0",
+    "@alirya/object": "^0.37.1",
+    "@alirya/string": "^0.16.2",
+    "@alirya/value": "^0.15.0",
+    "@alirya/message": "^0.12.0",
+    "@alirya/code": "^0.3.1",
     "ts-toolbelt": "^9.6.0"
   },
   "devDependencies": {
