pkg: update name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alirya/validatable",
+  "name": "@axiona/validatable",
   "version": "0.21.1",
   "description": "Typescript validatable",
   "publishConfig": {
@@ -12,20 +12,20 @@
     "cache": false
   },
   "license": "Apache-2.0",
-  "homepage": "https://github.com/alirya/validatable",
+  "homepage": "https://github.com/axiona/validatable",
   "repository": {
     "type": "git",
-    "url": "https://github.com/alirya/validatable"
+    "url": "https://github.com/axiona/validatable"
   },
   "dependencies": {
     "tslib": "^2.5.0",
-    "@alirya/boolean": "^0.12.1",
-    "@alirya/function": "^0.17.1",
-    "@alirya/object": "^0.38.1",
-    "@alirya/string": "^0.17.1",
-    "@alirya/value": "^0.16.1",
-    "@alirya/message": "^0.13.1",
-    "@alirya/code": "^0.4.1",
+    "@axiona/boolean": "^0.12.1",
+    "@axiona/function": "^0.17.1",
+    "@axiona/object": "^0.38.1",
+    "@axiona/string": "^0.17.1",
+    "@axiona/value": "^0.16.1",
+    "@axiona/message": "^0.13.1",
+    "@axiona/code": "^0.4.1",
     "ts-toolbelt": "^9.6.0"
   },
   "devDependencies": {
