--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "@types/node": "^16.11.7"
   },
   "scripts": {
-    "spec-run-js": "jasmine --config=./jasmine.json",
-    "spec-run": "jasmine --config=./jasmine.json",
-    "spec-run-debug": "jasmine --config=./jasmine-debug.json",
+    "spec-run-js": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
+    "spec-run": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-debug": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
     "spec": "npm-run-all spec-compile spec-run",
     "spec-compile": "npm-run-all _spec-compile-script spec-cleanup",
     "spec-compile-watch": "npm-run-all --sequential _spec-ensure-directory --parallel _spec-compile-watch-script spec-cleanup-watch",
@@ -78,7 +78,7 @@
     "_spec-compile-watch-script": "tsc-fancy --preserveConsoleOutput -w -p tsconfig-spec.json",
     "_compile-ensure-directory": "mkdirp dist",
     "_release_copy-meta-files": "cpy package.json package-lock.json LICENSE Readme.md .npmignore dist",
-    "_release-remove-compile-cache": "rimraf ./dist/.compiler-cache.json",
+    "_release-remove-compile-cache": "rimraf ./dist/compiler-cache.json",
     "_doc-generate": "typedoc --entryPointStrategy expand ./src --out docs",
     "_doc-clean": "rimraf docs",
     "prepublishOnly": "cd ../dist",
