--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ts-cleaner": "^1.0.5",
     "typescript": "^4.9.5",
     "tslint": "^5.13.0",
-    "typedoc": "^0.22.10",
+    "typedoc": "^0.25.4",
     "tsc-fancy": "^1.1.2",
     "ts-toolbelt": "^9.6.0",
     "utility-types": "^3.10.0",
@@ -53,9 +53,9 @@
     "@types/node": "^16.11.7"
   },
   "scripts": {
-    "spec-run-js": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
-    "spec-run": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
-    "spec-run-debug": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
+    "spec-run-js": "node --enable-source-maps --trace-warnings node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
+    "spec-run": "node --enable-source-maps --trace-warnings node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --color",
+    "spec-run-debug": "node --inspect --enable-source-maps --trace-warnings node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
     "spec": "npm-run-all spec-compile spec-run",
     "spec-compile": "npm-run-all _spec-compile-script spec-cleanup",
     "spec-compile-watch": "npm-run-all --sequential _spec-ensure-directory --parallel _spec-compile-watch-script spec-cleanup-watch",
@@ -66,8 +66,8 @@
     "spec-cleanup-watch": "ts-cleaner --verbose --dist=dist-spec --src=spec --watch",
     "compile-watch": "npm-run-all --sequential _compile-ensure-directory --parallel _compile-script-watch cleanup-watch _compile-asset-watch",
     "release": "npm publish ./dist",
-    "lint": "tslint --project ./tslint.json",
-    "lint-fix": "tslint --project ./tslint.json --fix",
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
     "doc-generate": "npm-run-all _doc-clean _doc-generate",
     "git-tag": "package-version-git-tag",
     "git-tag-push": "package-version-git-tag --push",
@@ -82,8 +82,8 @@
     "_doc-generate": "typedoc --entryPointStrategy expand ./src --out docs",
     "_doc-clean": "rimraf docs",
     "prepublishOnly": "cd ../dist",
-    "_compile-asset": "cpx \"./{package.json,package-lock.json,LICENSE,Readme.md,.npmignore}\" ./dist/ --verbose",
-    "_compile-asset-watch": "cpx \"./{package.json,package-lock.json,LICENSE,README.md,.npmignore}\" ./dist/ --verbose --watch",
+    "_compile-asset": "cpx ./{package.json,package-lock.json,LICENSE,Readme.md,.npmignore} ./dist/ --verbose",
+    "_compile-asset-watch": "cpx ./{package.json,package-lock.json,LICENSE,README.md,.npmignore} ./dist/ --verbose --watch",
     "prerelease": "npm-run-all _release-remove-compile-cache compile",
     "installs": "npm i",
     "lint1": "eslint .",
